# Tree-detector-drone

./: README.md
desensitized_tree_detector/: CMakeLists.txt  README_DESENSITIZED.md
desensitized_tree_detector/include/: tree_detector.hpp  yolov5_trt.h
desensitized_tree_detector/src/: tree_detector.cpp  yolov5_trt.cpp
